--- a/src/Frontend/heroBottom/HeroBottom.css
+++ b/src/Frontend/heroBottom/HeroBottom.css
@@ -1,36 +1,30 @@
-/* Parent */
 .hero-bottom {
     background-color: #0b3d2e;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 20px;
     padding: 20px;
-    gap: 16px;
 }
 
 .feature-card {
     background-color: #43A047;
     border-radius: 17px;
     padding: 12px 16px;
-    margin: 10px;
     display: flex;
     align-items: center;
     gap: 12px;
 
-    flex: 1;
+    width: 260px;
+    max-width: 100%;
 }
 
 .feature-card img {
     width: 55px;
     height: 55px;
     object-fit: contain;
-    border: none;
-    outline: none;
-    box-shadow: none;
-}
-
-.feature-card h3 {
-    margin: 0;
-    font-size: 14px;
+    flex-shrink: 0;
 }
 
 .feature-card p {
@@ -39,4 +33,22 @@
     font-weight: 600;
     color: #F5F5F5;
     line-height: 1.4;
+}
+
+@media (max-width:768px) {
+
+    .hero-bottom {
+        flex-direction: column;
+        padding: 20px 15px;
+    }
+
+    .feature-card {
+        width: 100%;
+        max-width: 340px;
+    }
+
+    .feature-card p {
+        font-size: 16px;
+    }
+
 }
